--- a/singledebt.css
+++ b/singledebt.css
@@ -1,7 +1,7 @@
 #main_content {
-    width: 720px;
-    height: 640px;
-    background-color: lightblue;
+    width: 730px;
+    height: 660px;
+    background-color: #00548A;
     padding: 10px;
 }
 
@@ -11,9 +11,17 @@
     font-style: italic;
 }
 
+#main_content h1 {
+    color: white;
+    padding: 5px 0px;
+    text-align: center;
+}
+
 #left_panel {
     float: left;
     width: 220px;
+    padding: 10px;
+    background-color: white;
 }
 
 #main_content p {
@@ -22,7 +30,7 @@
 }
 
 #left_panel .topLevel {
-    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 #settings input,select {
@@ -55,6 +63,10 @@
     margin-bottom: 10px;
 }
 
+.ui-slider .ui-slider-handle {
+    background: #00548A;
+}
+
 .inputField {
     width: 30px;
     margin: 0 auto;
@@ -63,16 +75,22 @@
 
 #reset_area {
     text-align: center;
+    margin-bottom: 0px !important;
 }
 
 #right_panel {
-    margin-left: 20px;
+    margin-left: 10px;
     float: left;
     text-align: right;
 }
 
-#right_panel h3 {
+#right_panel h2 {
     margin-top: 10px;
+    text-align: center;
+}
+
+#chart_area {
+    background-color: white;
 }
 
 #series_area {
@@ -81,14 +99,22 @@
 }
 
 #chart_caption {
+    font-size: 11pt;
     font-style: italic;
     text-align: left;
 }
 
 #results_area {
     padding: 25px;
-    background-color: white;
+    padding-top: 10px;
     margin: 40px;
+    margin-top: 55px;
+    background-color: white;
+}
+
+#results_area h3 {
+    text-align: center;
+    padding: 5px 0px;
 }
 
 #results_area p {
