--- a/debtcalc.css
+++ b/debtcalc.css
@@ -1,7 +1,11 @@
+body {
+    margin: auto;
+}
+
 #main_content {
     margin: auto;
-    width: 730px;
-    height: 660px;
+    width: 760px;
+    height: 630px;
     background-color: #00548A;
     padding: 10px;
 }
@@ -10,23 +14,12 @@
     margin: 0px;
     padding: 0px;
     font-style: italic;
+    text-align: center;
 }
 
 #main_content h1 {
     color: white;
     padding: 5px 0px;
-    text-align: center;
-}
-
-#main_content h3 {
-    text-align: center;
-}
-
-#left_panel {
-    float: left;
-    width: 220px;
-    padding: 10px;
-    background-color: white;
 }
 
 #main_content p {
@@ -34,30 +27,39 @@
     padding: 0px;
 }
 
-#left_panel .topLevel {
-    margin-bottom: 10px;
+#left_panel {
+    float: left;
+    width: 260px;
+    padding: 5px;
+    background-color: white;
+    text-align: left;
 }
 
-#settings input,select {
-    float: right;
-    margin: 0px;
+#left_panel input,select {
+    margin: 0;
 }
 
-#settings #custom_target {
-    float: none;
+#settings {
+    padding: 5px 35px;
+}
+
+#custom_target {
     width: 25px;
-    text-align: right;
-}
-
-#slider_area {
-    height: 340px;
 }
 
 .slideContainer {
     position: relative;
     float: left;
     text-align: center;
-    width: 110px;
+    width: 120px;
+    padding: 5px 2px;
+    background-color: #e0e0e0;
+    border-style: solid;
+    border-color: white;
+}
+
+.selector {
+    text-align: left;
 }
 
 .inputSlider {
@@ -73,8 +75,8 @@
 }
 
 .inputField {
-    width: 30px;
-    margin: 0 auto;
+    float: none !important;
+    width: 35px;
     text-align: right;
 }
 
