--- a/dev/debtcalc.css
+++ b/dev/debtcalc.css
@@ -3,9 +3,9 @@ body {
     font-size: 12pt;
     font-weight: 400;
     margin: auto;
-    width: 800px;
-    height: 660px;
-    padding: 10px;
+    width: 705px;
+    height: 640px;
+    padding: 5px;
     background-color: #131543;
 }
 
@@ -41,18 +41,17 @@ h5 {
 
 #left_panel {
     float: left;
-    width: 280px;
-    padding: 5px;
+    width: 270px;
     background-color: white;
     text-align: left;
 }
 
 #left_panel input,select {
-    margin: 0;
+    margin: 0px;
 }
 
 #settings {
-    padding: 5px 30px;
+    padding: 0px 30px;
 }
 
 label .rightJustified {
@@ -67,8 +66,8 @@ label .rightJustified {
     position: relative;
     float: left;
     text-align: center;
-    width: 130px;
-    padding: 5px 2px;
+    width: 125px;
+    padding: 2px 2px;
     background-color: #e0e0e0;
     border-style: solid;
     border-color: white;
@@ -117,11 +116,11 @@ label .rightJustified {
 
 #reset_area {
     text-align: center;
-    margin-bottom: 0px !important;
+    margin-bottom: 5px;
 }
 
 #right_panel {
-    margin-left: 10px;
+    margin-left: 5px;
     float: left;
     background: #d0d0d0;
 }
@@ -149,11 +148,11 @@ label .rightJustified {
 }
 
 #series_area {
-    height: 300px;
-    width: 500px;
+    height: 280px;
+    width: 430px;
 }
 
 #pie_area {
-    height: 222px;
-    width: 500px;
+    height: 221px;
+    width: 430px;
 }
