--- a/dev/debtcalc.css
+++ b/dev/debtcalc.css
@@ -3,8 +3,8 @@ body {
     font-size: 12pt;
     font-weight: 400;
     margin: auto;
-    width: 705px;
-    height: 630px;
+    width: 740px;
+    height: 695px;
     padding: 5px;
     background-color: #131543;
 }
@@ -20,6 +20,7 @@ h1,h2,h3,h4,h5 {
 h1 {
     color: white;
     font-size: 25pt;
+    margin: 5px;
 }
 
 h2 {
@@ -40,8 +41,9 @@ h5 {
 
 #left_panel {
     float: left;
-    width: 270px;
-    height: 585px;
+    width: 290px;
+    height: 600px;
+    padding: 5px;
     background-color: white;
     text-align: left;
 }
@@ -67,10 +69,9 @@ label .rightJustified {
     float: left;
     text-align: center;
     width: 125px;
-    padding: 2px 2px;
+    padding: 5px;
     background-color: #e0e0e0;
-    border-style: solid;
-    border-color: white;
+    border: 5px solid white;
 }
 
 .inputField {
@@ -116,17 +117,25 @@ label .rightJustified {
 
 #reset_area {
     text-align: center;
-    margin-bottom: 5px;
+}
+
+#reset_button {
+    margin: 5px !important;
 }
 
 #right_panel {
-    margin-left: 5px;
+    padding-left: 10px;
     float: left;
-    background: #d0d0d0;
+    background: #656565;
+    height: 610px;
 }
 
 .chartContainer {
     background-color: white;
+    padding: 5px 0px 3px 0px;
+}
+
+#series_container {
     margin-bottom: 10px;
 }
 
@@ -153,6 +162,6 @@ label .rightJustified {
 }
 
 #pie_area {
-    height: 221px;
+    height: 240px;
     width: 430px;
 }
